# pattern_access

./: .gitignore  CMakeLists.txt  prepare.sh  vcpkg.json
configs/: config.json
inc/: access_wrapper.h  common.h  dynamic_random_access.h  mem_access.h  memory_access_base.h  pointer_chase_access.h  sequential_access.h  stride_access.h
src/: access_wrapper.cc  dynamic_random_access.cc  main.cc  mem_access.cc  pointer_chase_access.cc  sequential_access.cc  stride_access.cc
